# THSR-booker

./: .gitignore  README.md  app.py  chatgpt_sample.py  flask_sample.py  main.py  pyproject.toml  requirements.txt
codes/: booking_info_extraction_flow.py  constants.py  database.py  execute.py  ocr.py  selenium_thsr_booker.py  thsr_booker_steps.py  util.py  web_element.py
codes/tools/: chatgpt_sample.py  check_user_data.py  ocr.py
thsr_booker/: main.py
thsr_booker/code/: execute.py  ocr.py  thsr_booker.py  util.py
thsr_booker/config/: constants.py  models.py  user_info.yaml  web_element.py
