[tool.poetry]
name = "thsr-booker"
version = "0.1.0"
description = ""
authors = ["TY <tyyyy66@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12, <3.13"
ddddocr = "^1.5.6"
selenium = "^4.29.0"
chromedriver-autoinstaller = "^0.6.4"
pydantic = "^2.10.6"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
